	(fiid_obj_copy): New function.

	* common/src/tool-sdr-cache-common.h,
	common/src/tool-sdr-cache-common.c
	(sdr_cache_get_threshold_settable): New function.

	* libfreeipmi/include/freeipmi/util/ipmi-sensor-util.h,
	libfreeipmi/src/util/ipmi-sensor-util.c
	(ipmi_sensor_decode_raw_value): New function.

	* common/src/config-common.h, common/src/config-commit.c: Support
	new CONFIG_READABLE_ONLY flag.

	* common/src/config-section.h, common/src/config-section.c
	(config_section_update_keyvalue_output_double): New function.

	* common/src/config-common.h: Change validate callback to take a
	void *arg.

	* common/src/config-section.h, common/src/config-section.c,
	bmc-config/, pef-config/: Adjust for validate callback change.

	* bmc-config/, pef-config/: Change -f to -n option.  Support -f
	legacy.

	* libfreeipmi/include/freeipmi/util/ipmi-sensor-util.h,
	libfreeipmi/src/util/ipmi-sensor-util.c
	(ipmi_sensor_decode_raw_value): New function.

        * ipmi-sensors-config/: New tool.

        * Makefile.am, configure.ac: Adjust for new tool.

	* Various minor code cleanup/fixes.

	* Update docs appropriately for new tool.

2008-01-25  Albert Chu <chu11@llnl.gov>

	* pef-config/pef-config.8.pre.in: Add general text.
	
2008-01-24  Albert Chu <chu11@llnl.gov>

	* pef-config/src/pef-config-wrapper.h,
	pef-config/src/pef-config-wrapper.c: Remove useless files.

	* pef-config/src/: Adjust files appropriately.

	* pef-config/src/pef-config.c, bmc-config/src/bmc-config.c: Make
	function static.

	* common/src/tool-sdr-cache-common.c: Fix compile issue.  Re-work
	to work with NULL pstate.
	
2008-01-24  Albert Chu <chu11@llnl.gov>

	* pef-config/pef-config.8.pre.in: Add "GENERAL USE" section.  Fix
	some typos.

	* bmc-config/bmc-config.8.pre.in: Fix some typos.

	* pef-config/src/pef-config-argp.c: Fix doc typo.
	
2008-01-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache-create.c
	(ipmi_sdr_cache_create): Fix record count corner case.
	