@@ -49,7 +49,8 @@
 	(ipmi_sensor_decode_raw_value): New function.
 
 	* common/src/config-common.h, common/src/config-commit.c: Support
-	new CONFIG_READABLE_ONLY flag.
+	new CONFIG_READABLE_ONLY flag.  New CONFIG_VALIDATE_OUT_OF_RANGE
+	validation return value.
 
 	* common/src/config-section.h, common/src/config-section.c
 	(config_section_update_keyvalue_output_double): New function.
@@ -59,6 +60,9 @@
 
 	* common/src/config-section.h, common/src/config-section.c,
 	bmc-config/, pef-config/: Adjust for validate callback change.
+
+	* common/src/config-section.c, common/src/config-validate.c:
+	Adjust for new CONFIG_VALIDATE_OUT_OF_RANGE value.
 
 	* bmc-config/, pef-config/: Change -f to -n option.  Support -f
 	legacy.
